# CodexAgent

./: .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  docker-compose.yml  mypy.ini  noxfile.py  py.typed  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml
app/: __init__.py  cli.py  py.typed
app/agents/: docgen_agent.py  refactor_agent.py  summarize_agent.py
app/commands/: docgen.py  refactor.py  summarize.py
app/llm/: gemini.py
docs/: Makefile  README.md  requirements.txt
docs/source/: api_reference.rst  changelog.rst  conf.py  contributing.rst  getting_started.rst  index.rst  user_guide.rst
tests/: conftest.py  test_docgen.py  test_refactor.py  test_summarize.py
