[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexagent"
version = "0.1.0"
description = "AI-powered code analysis, documentation, and refactoring tool"
readme = "README.md"
authors = [
    {name = "Sylvester Francis", email = "techwithsyl@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "astor>=0.8.1",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.2",
    "ruff>=0.0.280",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "pytest-sugar>=0.9.0",
    "pytest-xdist>=3.2.0",
    "pytest-asyncio>=0.20.0",
    "coverage>=7.0.0",
    "click>=8.0.0",
    "responses>=0.22.0",
]

[project.urls]
"Homepage" = "https://github.com/sylvester-francis/CodexAgent"
"Bug Tracker" = "https://github.com/sylvester-francis/CodexAgent/issues"
"Documentation" = "https://sylvester-francis.github.io/CodexAgent/"

[project.scripts]
codexagent = "app.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
# Add any format-specific configurations here
quote-style = "double"

[tool.ruff.lint.isort]
# Add any isort-specific configurations here
known-first-party = ["app"]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist"
]
per-file-ignores = [
    "__init__.py: F401"
]
max-complexity = 10

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
